--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,8 @@
     
     <main id="main-wrapper">
         <div id="project-wrapper" class="vflex">
-            <h2 class="page-header">Projects</h2>
-            <div id="tag-filters" class="hflex"></div>
+            <h2 class="page-header bold">Projects</h2>
+            <div id="tag-filters" class="hflex cap-text"></div>
             
             <div id="project-list-container"></div>
             <div id="empty-state"> No projects found. </div>
@@ -31,10 +31,10 @@
                     <div class="project-block">
                         <div class="project-block-left">
                             <div class="project-color"></div>
-                            <div class="project-name"></div>
+                            <div class="project-name subtitle-text"></div>
                         </div>
                         <div class="project-block-right">   
-                            <div class="project-tag-container hflex"></div>
+                            <div class="project-tag-container hflex cap-text"></div>
                             <div class="project-link">></div> <!-- arrow instead of period -->
                         </div>
                     </div>
