--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </h1>
                 <script>
                     var typed = new Typed('#type-element', {
-                        strings:['Seo.^1000', 'Structures', 'Synthesises', 'Spreads'],
-                        typeSpeed: 100,
+                        strings:['^500Seo.^1000', 'Structures', 'Synthesises', 'Spreads', 'Seo.'],
+                        typeSpeed: 80,
                         backSpeed: 50,
                         backDelay: 1000,
                         loop: true,
                         loopCount: 1,
-                        smartBackspace: false,
+                        smartBackspace: true,
                     });
                 </script>
             </div>
@@ -45,26 +45,26 @@
                 </a>
                 <div class="icon-block vflex">
                     <div id="contact-grid" class="icon-image">
-                        <div class="contact-icon">
+                        <a href="mailto:yujeong.seo22@imperial.ac.uk" class="contact-icon">
                             <svg class="contact-icon-logo">
                                 <use href="/assets/svg/contact-mail.svg"></use>
                             </svg>
-                        </div>
-                        <div class="contact-icon">
+                        </a>
+                        <a href="http://linkedin.com/in/yujeongseo03" target="_blank" class="contact-icon">
                             <svg class="contact-icon-logo">
                                 <use href="/assets/svg/contact-linkedin.svg"></use>
                             </svg>
-                        </div>
-                        <div class="contact-icon">
+                        </a>
+                        <a href="https://github.com/yujeong-seo" target="_blank" class="contact-icon">
                             <svg class="contact-icon-logo">
                                 <use href="/assets/svg/contact-github.svg"></use>
                             </svg>
-                        </div>
-                        <div class="contact-icon">
+                        </a>
+                        <a href="https://www.instagram.com/s_yuj_design" target="_blank" class="contact-icon">
                             <svg class="contact-icon-logo">
                                 <use href="/assets/svg/contact-insta.svg"></use>
                             </svg>
-                        </div>
+                        </a>
                     </div>
                     <div class="icon-caption">Contacts</div>
                 </div>
