--- a/projects/namo.html
+++ b/projects/namo.html
@@ -68,24 +68,27 @@
             <!-- Content: Problem -->
             <div class="project-row">
                 <h4 class="title-text bold"> Problem </h4>
-                <div class="problem-wrapper hflex">
-                    <div class="problem-block"> 
-                        <span class="bold"> Issue 1 </span><br>
-                        <span class="pret light"> 
-                            Problem 1 is that 
-                        </span>
-                    </div>
-                    <div class="problem-block"> 
-                        <span class="bold"> Issue 2 </span><br>
-                        <span class="pret light"> 
-                            Problem 2 is that 
-                        </span>
-                    </div>
-                    <div class="problem-block"> 
-                        <span class="bold"> Issue 3 </span><br>
-                        <span class="pret light"> 
-                            Problem 3 is that 
-                        </span>
+                <div class="project-content">
+                    Three main issues include -
+                    <div class="problem-wrapper">
+                        <div class="problem-block"> 
+                            <span class="bold"> Mismatch Between My Diary and Calendar </span><br>
+                            <span class="pret light"> 
+                                Problem 1 is that 
+                            </span>
+                        </div>
+                        <div class="problem-block"> 
+                            <span class="bold"> Endless Message to Set Up a Group Schedule </span><br>
+                            <span class="pret light"> 
+                                Problem 2 is that 
+                            </span>
+                        </div>
+                        <div class="problem-block"> 
+                            <span class="bold"> Record of Shared Schedule </span><br>
+                            <span class="pret light"> 
+                                Problem 3 is that 
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,24 +96,24 @@
             <!-- Content: Swiper -->
             <div class="project-row">
                 <h4 class="title-text bold"> Process </h4>
-                <div class="project-content vflex">
+                <div class="project-content">
                     <div class="custom-pagination hflex"></div>
                     <div class="myswiper">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <div class="swiper-img"></div>
+                                <div class="project-img"></div>
                                 <p class="body-text pret"> 
                                     First image description <br>
                                 </p>
                             </div>
                             <div class="swiper-slide">
-                                <div class="swiper-img"></div>
+                                <div class="project-img"></div>
                                 <p class="body-text pret"> 
                                     Second image description 
                                 </p>
                             </div>
                             <div class="swiper-slide">
-                                <div class="swiper-img"></div>
+                                <div class="project-img"></div>
                                 <p class="body-text pret"> 
                                     Third image description 
                                 </p>
@@ -148,6 +151,12 @@
             <!-- Content: Non Swiper -->
             <div class="project-row">
                 <h4 class="title-text bold"> Solution </h4>
+                <div class="project-content">
+                    <div class="project-img"></div>
+                    <p class="body-text pret"> 
+                        Remaining images and description 
+                    </p>
+                </div>
             </div>
         </main>
         
@@ -155,7 +164,7 @@
 
         <footer id="footer">
             <p> London, Seoul </p>
-            <p> 2025 Yujeong Seo </p>
+            <p> © 2025, Yujeong Seo </p>
         </footer>
     </section>
 </body>
