list structure update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </svg>
             </a>
             <div id="left-nav">
-                <a href="index.html" class="regular">About</a> 
+                <a href="index.html" class="regular">Archive</a> 
                 <a href="projects.html" class="regular">Projects</a> 
             </div>
         </nav>
