--- a/projects.html
+++ b/projects.html
@@ -23,9 +23,7 @@
             <h2 class="page-header bold">Projects</h2>
             <div class="hspread">
                 <div id="tag-filters" class="hflex cap-text"></div>
-                <div id="view-controls">
-                    <button id="view-toggle-btn">Gallery</button>
-                </div>
+                <!-- Right end element -->
             </div>
             
             <div id="project-list-container"></div>
