--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-gb">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title> Yujeong S </title> <!--Website Title-->
     <!-- ADD favicon -->
     <link rel="stylesheet" href="css/main.css">
