--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title> Yujeong S </title> <!--Website Title-->
+    <title> YS </title> <!--Website Title-->
     <!-- ADD favicon -->
     <link rel="stylesheet" href="css/main.css">
     <script type="module" src="js/main.js"></script>
