--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en-gb">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title> YS </title> <!--Website Title-->
     <link rel="stylesheet" href="css/main.css">
     <script type="module" src="js/main.js"></script>
